--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -27,13 +27,19 @@ suites:
 - name: default
   run_list:
   - recipe[rs-lamp]
-  - recipe[rs-mysql::server]
+  - recipe[rs-mysql::default]
   - recipe[rs-application_php]
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
+    cloud:
+      provider: 'vagrant'
+      public_ips: ['10.10.1.1']
+      private_ips: ['10.0.2.15']
     rs-mysql:
+      lineage: 'lineage'
       server_root_password: rootpass
+      server_repl_password: replpass
       server_usage: dedicated
       application_username: appuser
       application_password: apppass
@@ -57,12 +63,13 @@ suites:
 - name: dump_import_gz
   run_list:
   - recipe[rs-lamp]
-  - recipe[rs-mysql::server]
+  - recipe[rs-mysql::default]
   - recipe[rs-application_php]
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
     rs-mysql:
+      lineage: 'lineage'
       server_root_password: rootpass
       server_usage: dedicated
       application_username: appuser
@@ -87,13 +94,15 @@ suites:
 - name: dump_import_bz2
   run_list:
   - recipe[rs-lamp]
-  - recipe[rs-mysql::server]
+  - recipe[rs-mysql::default]
   - recipe[rs-application_php]
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
     rs-mysql:
+      lineage: 'lineage'
       server_root_password: rootpass
+      server_repl_password: replpass
       server_usage: dedicated
       application_username: appuser
       application_password: apppass
@@ -117,13 +126,15 @@ suites:
 - name: dump_import_xz
   run_list:
   - recipe[rs-lamp]
-  - recipe[rs-mysql::server]
+  - recipe[rs-mysql::default]
   - recipe[rs-application_php]
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
     rs-mysql:
+      lineage: 'lineage'
       server_root_password: rootpass
+      server_repl_password: replpass
       server_usage: dedicated
       application_username: appuser
       application_password: apppass
