--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -68,9 +68,14 @@ suites:
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
+    cloud:
+      provider: 'vagrant'
+      public_ips: ['10.10.1.1']
+      private_ips: ['10.0.2.15']
     rs-mysql:
       lineage: 'lineage'
       server_root_password: rootpass
+      server_repl_password: replpass
       server_usage: dedicated
       application_username: appuser
       application_password: apppass
@@ -99,6 +104,10 @@ suites:
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
+    cloud:
+      provider: 'vagrant'
+      public_ips: ['10.10.1.1']
+      private_ips: ['10.0.2.15']
     rs-mysql:
       lineage: 'lineage'
       server_root_password: rootpass
@@ -131,6 +140,10 @@ suites:
   - recipe[rs-lamp::dump_import]
   - recipe[curl]
   attributes:
+    cloud:
+      provider: 'vagrant'
+      public_ips: ['10.10.1.1']
+      private_ips: ['10.0.2.15']
     rs-mysql:
       lineage: 'lineage'
       server_root_password: rootpass
